--- a/test_exp.html
+++ b/test_exp.html
@@ -4,6 +4,7 @@
         <title>Questionaire</title>
         <script src="jspsych-6.0.2/jspsych.js"></script>
         <script src="jspsych-6.0.2/plugins/jspsych-survey-text.js"></script>
+        <script src="validators.js"></script>
         <script src="questionaire.js"></script>
         <link href="stylesheet.css" rel="stylesheet" type="text/css"></link>
         <link href="jspsych-6.0.2/css/jspsych.css" rel="stylesheet" type="text/css"></link>
