--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Questionaire</title>
+        <title>LangDev Questionaire</title>
         <script src="jspsych-6.0.2/jspsych.js"></script>
         <script src="jspsych-6.0.2/plugins/jspsych-survey-text.js"></script>
+        <script src="plugins/language-info.js"></script>
         <script src="validators.js"></script>
         <script src="questionaire.js"></script>
         <link href="stylesheet.css" rel="stylesheet" type="text/css"></link>
