--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <script src="plugins/language-info.js"></script>
         <script src="validators.js"></script>
         <script src="questionaire.js"></script>
-        <link href="stylesheet.css" rel="stylesheet" type="text/css"></link>
-        <link href="jspsych-6.0.2/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+        <link href="stylesheet.css" rel="stylesheet" type="text/css"/>
+        <link href="jspsych-6.0.2/css/jspsych.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
     </body>
