gender-info plugin created and included, validation not done

--- a/study_assets_root/questionaire/index.html
+++ b/study_assets_root/questionaire/index.html
@@ -6,6 +6,7 @@
         <script src="/study_assets/questionaire/jspsych-6.0.2/jspsych.js"></script>
         <script src="/study_assets/questionaire/jspsych-6.0.2/plugins/jspsych-survey-text.js"></script>
         <script src="/study_assets/questionaire/js/language-info.js"></script>
+        <script src="/study_assets/questionaire/js/gender-info.js"></script>
         <script src="/study_assets/questionaire/js/validators.js"></script>
         <script src="/study_assets/questionaire/js/questionaire.js"></script>
          
