--- a/study_assets_root/questionaire/index.html
+++ b/study_assets_root/questionaire/index.html
@@ -8,6 +8,7 @@
         <script src="/study_assets/questionaire/js/survey-text-custom.js"></script>
         <script src="/study_assets/questionaire/js/language-info.js"></script>
         <script src="/study_assets/questionaire/js/gender-info.js"></script>
+        <script src="/study_assets/questionaire/js/music-info.js"></script>
         <script src="/study_assets/questionaire/js/validators.js"></script>
         <script src="/study_assets/questionaire/js/questionaire.js"></script>
          
