--- a/study_assets_root/questionaire/index.html
+++ b/study_assets_root/questionaire/index.html
@@ -4,7 +4,7 @@
         
         <script src="/assets/javascripts/jatos.js"></script>
         <script src="/study_assets/questionaire/jspsych-6.0.2/jspsych.js"></script>
-        <script src="/study_assets/questionaire/jspsych-6.0.2/plugins/jspsych-instructions.js"></script>
+        <script src="/study_assets/questionaire/js/instructions.js"></script>
         <script src="/study_assets/questionaire/js/survey-yes-no.js"></script>
         <script src="/study_assets/questionaire/js/survey-text-custom.js"></script>
         <script src="/study_assets/questionaire/js/language-info.js"></script>
