--- a/study_assets_root/MusicLang/questionaire.html
+++ b/study_assets_root/MusicLang/questionaire.html
@@ -1,19 +1,25 @@
 <html>
-    <head>
-        <title>LangDev Questionaire</title>
-        
-        <script src="/assets/javascripts/jatos.js"></script>
-        <script src="/study_assets/MusicLang/jspsych-6.0.2/jspsych.js"></script>
-        <script src="/study_assets/MusicLang/js/instructions.js"></script>
-        <script src="/study_assets/MusicLang/js/survey-yes-no.js"></script>
-        <script src="/study_assets/MusicLang/js/survey-text-custom.js"></script>
-        <script src="/study_assets/MusicLang/js/language-info.js"></script>
-        <script src="/study_assets/MusicLang/js/gender-info.js"></script>
-        <script src="/study_assets/MusicLang/js/music-info.js"></script>
-        <script src="/study_assets/MusicLang/js/validators.js"></script>
-        <script src="/study_assets/MusicLang/js/questionaire.js"></script>
-         
-        <link href="/study_assets/MusicLang/stylesheet.css" rel="stylesheet"/>
-        <link href="/study_assets/MusicLang/jspsych-6.0.2/css/jspsych.css" rel="stylesheet"/>
-    </head>
+
+<head>
+    <title>LangDev Questionaire</title>
+
+    <script src="/assets/javascripts/jatos.js"></script>
+    <script src="/study_assets/MusicLang/jspsych-6.0.2/jspsych.js"></script>
+    <script src="/study_assets/MusicLang/js/instructions.js"></script>
+    <script src="/study_assets/MusicLang/js/survey-yes-no.js"></script>
+    <script src="/study_assets/MusicLang/js/survey-text-custom.js"></script>
+    <script src="/study_assets/MusicLang/js/language-info.js"></script>
+    <script src="/study_assets/MusicLang/js/gender-info.js"></script>
+    <script src="/study_assets/MusicLang/js/music-info.js"></script>
+    <script src="/study_assets/MusicLang/js/validators.js"></script>
+    <script src="/study_assets/MusicLang/js/questionaire.js"></script>
+
+    <link href="/study_assets/MusicLang/stylesheet.css" rel="stylesheet" />
+    <link href="/study_assets/MusicLang/jspsych-6.0.2/css/jspsych.css" rel="stylesheet" />
+</head>
+<!-- The below body is to prevent web browsers from loading an implied body before jsPsych generates its own -->
+
+<body style="height: 0%">
+</body>
+
 </html>
