--- a/study_assets_root/MusicLang/eng-nat.html
+++ b/study_assets_root/MusicLang/eng-nat.html
@@ -7,6 +7,7 @@
     <script src="/study_assets/MusicLang/jspsych-6.0.2/jspsych.js"></script>
     <script src="/study_assets/MusicLang/js/instructions.js"></script>
     <script src="/study_assets/MusicLang/js/binary-audio.js"></script>
+    <script src="/study_assets/MusicLang/js/passage-highlight.js"></script>
     <script src="/study_assets/MusicLang/js/eng-nat.js"></script>
 
     <link href="/study_assets/MusicLang/stylesheet.css" rel="stylesheet" />
