multi-choice-mandarin.js + shows passage and questions, + no answers yet

--- a/study_assets_root/musiclang_engnat/eng-nat.html
+++ b/study_assets_root/musiclang_engnat/eng-nat.html
@@ -9,6 +9,7 @@
     <script src="/study_assets/musiclang_engnat/js/binary-audio.js"></script>
     <script src="/study_assets/musiclang_engnat/js/passage-highlight.js"></script>
     <script src="/study_assets/musiclang_engnat/js/survey-multi-choice.js"></script>
+    <script src="/study_assets/musiclang_engnat/js/multi-choice-mandarin.js"></script>
 
     <script src="/study_assets/musiclang_engnat/js/eng-nat.js"></script>
 
