+ new copy - timeline + minor code changes + harder to google translate + general instructions + autoplay instructions

--- a/study_assets_root/musiclang_mannat/man-nat.html
+++ b/study_assets_root/musiclang_mannat/man-nat.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="google" content="notranslate" />
     <title>LangDev MusicLang</title>
 
     <script src="/assets/javascripts/jatos.js"></script>
@@ -15,6 +16,7 @@
 
     <link href="/study_assets/musiclang_mannat/shared_assets/stylesheet.css" rel="stylesheet" />
     <link href="/study_assets/musiclang_mannat/shared_assets/jspsych-6.0.2/css/jspsych.css" rel="stylesheet" />
+    
 </head>
 <!-- The below body is to prevent web browsers from loading an implied body before jsPsych generates its own -->
 <body style="height: 0%">
