--- a/study_assets_root/musiclang_mannat/man-nat.html
+++ b/study_assets_root/musiclang_mannat/man-nat.html
@@ -9,7 +9,7 @@
     <script src="/study_assets/musiclang_mannat/shared_assets/js/instructions.js"></script>
     <script src="/study_assets/musiclang_mannat/shared_assets/js/binary-audio.js"></script>
     <script src="/study_assets/musiclang_mannat/shared_assets/js/passage-highlight.js"></script>
-    <script src="/study_assets/musiclang_mannat/shared_assets/js/survey-multi-choice.js"></script>
+    <!-- <script src="/study_assets/musiclang_mannat/shared_assets/js/survey-multi-choice.js"></script> -->
     <script src="/study_assets/musiclang_mannat/shared_assets/js/multi-choice.js"></script>
 
     <script src="/study_assets/musiclang_mannat/man-nat.js"></script>
