--- a/study_assets_root/musiclang_engnat/eng-nat.html
+++ b/study_assets_root/musiclang_engnat/eng-nat.html
@@ -5,17 +5,17 @@
     <title>LangDev MusicLang</title>
 
     <script src="/assets/javascripts/jatos.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/jspsych-6.0.4/jspsych.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/instructions.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/binary-audio.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/passage-highlight.js"></script>
-    <!-- <script src="/study_assets/musiclang_engnat/shared_assets/js/survey-multi-choice.js"></script> -->
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/multi-choice.js"></script>
+    <script src="shared_assets/jspsych-6.0.4/jspsych.js"></script>
+    <script src="shared_assets/js/instructions.js"></script>
+    <script src="shared_assets/js/binary-audio.js"></script>
+    <script src="shared_assets/js/passage-highlight.js"></script>
+    <!-- <script src="shared_assets/js/survey-multi-choice.js"></script> -->
+    <script src="shared_assets/js/multi-choice.js"></script>
 
-    <script src="/study_assets/musiclang_engnat/eng-nat.js"></script>
+    <script src="eng-nat.js"></script>
 
-    <link href="/study_assets/musiclang_engnat/shared_assets/stylesheet.css" rel="stylesheet" />
-    <link href="/study_assets/musiclang_engnat/shared_assets/jspsych-6.0.4/css/jspsych.css" rel="stylesheet" />
+    <link href="shared_assets/stylesheet.css" rel="stylesheet" />
+    <link href="shared_assets/jspsych-6.0.4/css/jspsych.css" rel="stylesheet" />
 
 
 </head>
