--- a/study_assets_root/musiclang_engnat/questionnaire.html
+++ b/study_assets_root/musiclang_engnat/questionnaire.html
@@ -4,18 +4,18 @@
     <title>LangDev Questionaire</title>
 
     <script src="/assets/javascripts/jatos.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/jspsych-6.0.4/jspsych.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/instructions.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/survey-yes-no.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/survey-text-custom.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/language-info.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/gender-info.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/music-info.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/validators.js"></script>
-    <script src="/study_assets/musiclang_engnat/shared_assets/js/questionnaire.js"></script>
+    <script src="shared_assets/jspsych-6.0.4/jspsych.js"></script>
+    <script src="shared_assets/js/instructions.js"></script>
+    <script src="shared_assets/js/survey-yes-no.js"></script>
+    <script src="shared_assets/js/survey-text-custom.js"></script>
+    <script src="shared_assets/js/language-info.js"></script>
+    <script src="shared_assets/js/gender-info.js"></script>
+    <script src="shared_assets/js/music-info.js"></script>
+    <script src="shared_assets/js/validators.js"></script>
+    <script src="shared_assets/js/questionnaire.js"></script>
 
-    <link href="/study_assets/musiclang_engnat/shared_assets/stylesheet.css" rel="stylesheet" />
-    <link href="/study_assets/musiclang_engnat/shared_assets/jspsych-6.0.4/css/jspsych.css" rel="stylesheet" />
+    <link href="shared_assets/stylesheet.css" rel="stylesheet" />
+    <link href="shared_assets/jspsych-6.0.4/css/jspsych.css" rel="stylesheet" />
 
 </head>
 <!-- The below body is to prevent web browsers from loading an implied body before jsPsych generates its own -->
