starting work for list-of-answers plugin (for task 2)

--- a/study_assets_root/towel/towel.html
+++ b/study_assets_root/towel/towel.html
@@ -8,7 +8,7 @@
     <script src="shared_assets/jspsych-6.0.4/jspsych.js"></script>
     <script src="shared_assets/js/instructions.js"></script>
     <script src="shared_assets/js/multi-choice.js"></script>
-
+    <script src="shared_assets/js/list-of-answers.js"></script>
     <script src="towel.js"></script>
 
     <link href="shared_assets/stylesheet.css" rel="stylesheet" />
