--- a/study_assets_root/musiclang_germnat/questionnaire.html
+++ b/study_assets_root/musiclang_germnat/questionnaire.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>LangDev Questionaire</title>
+    <title>LangDev Questionnaire</title>
 
     <script src="/assets/javascripts/jatos.js"></script>
     <script src="shared_assets/jspsych-6.0.4/jspsych.js"></script>
