--- a/study_assets_root/RespOnline/RO_exp.html
+++ b/study_assets_root/RespOnline/RO_exp.html
@@ -4,11 +4,11 @@
     <meta name="google" content="notranslate" />
     <title>LangDev RespOnline</title>
 
-    <script src="/assets/javascripts/jatos.js"></script>
-	<script src="jspsych-6.0.5/jspsych.js"></script>
-	<script src="jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
-	<script src="jspsych-6.0.5/plugins/jspsych-audio-keyboard-response.js"></script>
-	<script src="jspsych-6.0.5/plugins/jspsych-image-keyboard-response.js"></script>
+    <script src="/musiclang/assets/javascripts/jatos.js"></script>
+	<script src="shared_assets/jspsych-6.0.5/jspsych.js"></script>
+	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
+	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-audio-keyboard-response.js"></script>
+	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-image-keyboard-response.js"></script>
 	<script src="shared_assets/js/instructions.js"></script>
 	<script src="shared_assets/js/binary-audio.js"></script>
 
