--- a/study_assets_root/musiclang_germnat/questionnaire.html
+++ b/study_assets_root/musiclang_germnat/questionnaire.html
@@ -12,7 +12,7 @@
     <script src="shared_assets/js/gender-info.js"></script>
     <script src="shared_assets/js/music-info.js"></script>
     <script src="shared_assets/js/validators.js"></script>
-    <script src="shared_assets/js/questionnaire.js"></script>
+    <script src="questionnaire.js"></script>
 
     <link href="shared_assets/stylesheet.css" rel="stylesheet" />
     <link href="shared_assets/jspsych-6.0.4/css/jspsych.css" rel="stylesheet" />
