--- a/study_assets_root/recal/Recal_Questionnaire.html
+++ b/study_assets_root/recal/Recal_Questionnaire.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>LangDev RPS</title>
+    <title>LangDev Questionaire</title>
 <script src="jatos.js"></script>
 	<script src="jspsych-6.1/jspsych.js"></script>
   <script src="shared_assets/js/instructions.js"></script>
@@ -11,7 +11,7 @@
     <script src="shared_assets/js/gender-info.js"></script>
     <script src="shared_assets/js/music-info.js"></script>
     <script src="shared_assets/js/validators.js"></script>
-    <script src="Recal_RPS.js"></script>
+    <script src="Recal_questionnaire.js"></script>
 
 	<script src="jspsych-6.1/plugins/jspsych-html-keyboard-response.js"></script>
 	<script src="jspsych-6.1/plugins/jspsych-audio-keyboard-response.js"></script>
