--- a/study_assets_root/RespOnline/RO_questionnaire.html
+++ b/study_assets_root/RespOnline/RO_questionnaire.html
@@ -11,12 +11,12 @@
     <script src="shared_assets/js/gender-info.js"></script>
     <script src="shared_assets/js/music-info.js"></script>
     <script src="shared_assets/js/validators.js"></script>
-    <script src="shared_assets/js/RO_questionnaire.js"></script>
+    <script src="RO_questionnaire.js"></script>
 
 	<script src="jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
 	<script src="jspsych-6.0.5/plugins/jspsych-audio-keyboard-response.js"></script>
 	<script src="jspsych-6.0.5/plugins/jspsych-image-keyboard-response.js"></script>
-		
+
 	<link href="shared_assets/stylesheet.css" rel="stylesheet" />
 	<link href="jspsych-6.0.5/css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
