--- a/study_assets_root/RespOnline/RO_questionnaire.html
+++ b/study_assets_root/RespOnline/RO_questionnaire.html
@@ -3,8 +3,9 @@
 <head>
     <title>LangDev Questionaire</title>
 
-  	<script src="/assets/javascripts/jatos.js"></script>
-	<script src="jspsych-6.0.5/jspsych.js"></script><script src="shared_assets/js/instructions.js"></script>
+  	<script src="/musiclang/assets/javascripts/jatos.js"></script>
+	<script src="shared_assets/jspsych-6.0.5/jspsych.js"></script>
+  <script src="shared_assets/js/instructions.js"></script>
    	<script src="shared_assets/js/survey-yes-no.js"></script>
     <script src="shared_assets/js/survey-text-custom.js"></script>
     <script src="shared_assets/js/language-info.js"></script>
@@ -13,12 +14,12 @@
     <script src="shared_assets/js/validators.js"></script>
     <script src="RO_questionnaire.js"></script>
 
-	<script src="jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
-	<script src="jspsych-6.0.5/plugins/jspsych-audio-keyboard-response.js"></script>
-	<script src="jspsych-6.0.5/plugins/jspsych-image-keyboard-response.js"></script>
+    <script src="shared_assets/jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
+  	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-audio-keyboard-response.js"></script>
+  	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-image-keyboard-response.js"></script>
 
 	<link href="shared_assets/stylesheet.css" rel="stylesheet" />
-	<link href="jspsych-6.0.5/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+	<link href="shared_assets/jspsych-6.0.5/css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
 <!-- The below body is to prevent web browsers from loading an implied body before jsPsych generates its own -->
 
