--- a/study_assets_root/RespOnline/RO_RPS.html
+++ b/study_assets_root/RespOnline/RO_RPS.html
@@ -11,7 +11,7 @@
     <script src="shared_assets/js/gender-info.js"></script>
     <script src="shared_assets/js/music-info.js"></script>
     <script src="shared_assets/js/validators.js"></script>
-    <script src="RO_RPS.js"></script>
+    <script src="RPS.js"></script>
 
     <script src="shared_assets/jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
       <script src="shared_assets/jspsych-6.0.5/plugins/jspsych-audio-keyboard-response.js"></script>
