--- a/study_assets_root/recal/Recal_Testfinal.html
+++ b/study_assets_root/recal/Recal_Testfinal.html
@@ -51,7 +51,7 @@
     "<p> Answer as quickly and accurately as you can. </p>" +
     "<p> Please use your dominant hand (right if righthanded, left if lefthanded) to press the arrow keys and your non-dominant hand to press the spacebar or enter key. </p>" +
     "<p> <h2> Practice Trial </h2>" +
-    "<p> A trial consists of both the series of video clips and series of sound clips phases. <p>"
+    "<p> A trial consists of both the series of video clips and series of sound clips phases. <p>" +
     "<p> You will be given two practice trials before starting the test. Click <i>next</i> to begin the practice trials.</p>"],
           show_clickable_nav: true,
           allow_keys: false
