updated debrief section

--- a/study_assets_root/recal/Recal_Testfinal.html
+++ b/study_assets_root/recal/Recal_Testfinal.html
@@ -3927,13 +3927,12 @@ var end = {
     type: 'instructions',
     pages: [ '<h2>Study Complete</h2>' +
     '<p>Thank you for participating!</p>' +
-    '<p>This study aimed to investigate audiovisual processing in combination with motor information.' +
+    '<p>This study aims to investigate audiovisual processing in combination with motor information. ' +
     ' In particular, we are interested in how an ambiguous auditory stimulus can be recalibrated by a non-ambiguous visual stimulus in conjunction with motor processing. ' +
-    ' For example, if you are presented with an ambiguous sound between /ABA/ and /ADA/ paired with a face saying /ABA/, you may perceive that sound as /ABA/. Later, during the auditory-only trials, you may tend to respond that you heard this ambiguous sound as /ABA/.' +
-    ' In this study, we sometimes put the articulation in opposition to the face. For example, we had you articulate /ABA/ paired with a face saying /ADA/. We are interested to see how auditory-only responses would change.' +
+    ' For example, if you were presented with an ambiguous sound between /ABA/ and /ADA/ paired with a face saying /ABA/ and you perceived that sound as /ABA/, later during the auditory-only trials, you tend to respond that you heard this ambiguous sound as /ABA/.' +
+    ' We sometimes put the articulation in opposition to the face. For example, we had you articulate /ABA/ paired with a face saying /ADA/. We are interested to see how auditory-only responses would change.' +
     ' This research will help us clarify the link between audition and vision and the motor system in speech processing. </p>' +
   '<b>Click <i>next</i> for instructions on arranging compensation or to fill out the RPS form.</b>'],
-    data: {test_part: 'instructions'},
     show_clickable_nav: true,
     button_label_next: "Next",
     allow_keys: false
