updated debrief & stimuli

--- a/study_assets_root/recal/Recal_Testfinal.html
+++ b/study_assets_root/recal/Recal_Testfinal.html
@@ -1109,7 +1109,7 @@ if(randomint > 175){
   timeline.push(
     // condition 4 playlist #5
     say_ADA, prac_incon4ABA, audioDR4,
-    say_ABA, prac_con4ABA, audioDR4
+    say_ADA, prac_con4ADA, audioDR4
 );
 } else if(randomint > 50){
   timeline.push(
@@ -1120,13 +1120,13 @@ if(randomint > 175){
 } else if(randomint > 25){
   timeline.push(
     // condition 4 playlist #7
-    say_ADA, prac_incon4ABA, audioDR4,
-    say_ABA, prac_con4ABA, audioDR4
+    say_ABA, prac_incon4ADA, audioDR4,
+    say_ADA, prac_con4ADA, audioDR4
 );
 } else if(randomint > 0){
   timeline.push(
     // condition 4 playlist #8
-    say_ADA, prac_incon4ABA, audioDR4,
+    say_ABA, prac_incon4ADA, audioDR4,
     say_ABA, prac_con4ABA, audioDR4
 );
 }
@@ -1165,7 +1165,7 @@ if(randomint > 175){
   timeline.push(
     // condition 5 playlist #5
     say_ADA, prac_incon5ABA, audioDR5,
-    say_ABA, prac_con5ABA, audioDR5
+    say_ADA, prac_con5ADA, audioDR5
 );
 } else if(randomint > 50){
   timeline.push(
@@ -1176,13 +1176,13 @@ if(randomint > 175){
 } else if(randomint > 25){
   timeline.push(
     // condition 5 playlist #7
-    say_ADA, prac_incon5ABA, audioDR5,
-    say_ABA, prac_con5ABA, audioDR5
+    say_ABA, prac_incon5ADA, audioDR5,
+    say_ADA, prac_con5ADA, audioDR5
 );
 } else if(randomint > 0){
   timeline.push(
     // condition 5 playlist #8
-    say_ADA, prac_incon5ABA, audioDR5,
+    say_ABA, prac_incon5ADA, audioDR5,
     say_ABA, prac_con5ABA, audioDR5
 );
 }
@@ -1220,20 +1220,20 @@ if(randomint > 175){
 } else if(randomint > 75){
   timeline.push(
     // condition 6 playlist #5
-    say_ADA, prac_incon6ABA, audioDR6,
-    say_ABA, prac_con6ABA, audioDR6
+    say_ABA, prac_incon6ADA, audioDR6,
+    say_ADA, prac_con6ADA, audioDR6
 );
 } else if(randomint > 50){
   timeline.push(
     // condition 6 playlist #6
-    say_ADA, prac_incon6ABA, audioDR6,
+    say_ABA, prac_incon6ADA, audioDR6,
     say_ABA, prac_con6ABA, audioDR6
 );
 } else if(randomint > 25){
   timeline.push(
     // condition 6 playlist #7
     say_ADA, prac_incon6ABA, audioDR6,
-    say_ABA, prac_con6ABA, audioDR6
+    say_ADA, prac_con6ADA, audioDR6
 );
 } else if(randomint > 0){
   timeline.push(
@@ -1608,7 +1608,14 @@ if(randomint > 115){
     say_ABA, incon4ADA, audioDR4,
     say_ABA, incon4ADA, audioDR4,
     halfway,
-
+    say_ABA, con4ABA, audioDR4,
+    say_ABA, con4ABA, audioDR4,
+    say_ABA, con4ABA, audioDR4,
+    say_ABA, con4ABA, audioDR4,
+    say_ABA, con4ABA, audioDR4,
+    say_ABA, con4ABA, audioDR4,
+    say_ABA, con4ABA, audioDR4,
+    say_ABA, con4ABA, audioDR4,
     say_ADA, incon4ABA, audioDR4,
     say_ADA, incon4ABA, audioDR4,
     say_ADA, incon4ABA, audioDR4,
