--- a/study_assets_root/recal/Recal_Testfinal.html
+++ b/study_assets_root/recal/Recal_Testfinal.html
@@ -3937,7 +3937,7 @@ var end = {
     '<p>This study aims to investigate audiovisual processing in combination with motor information.' +
      ' In particular, we are interested in how an ambiguous auditory stimulus can be recalibrated by a non-ambiguous visual stimulus in conjunction with motor processing.' +
      ' For example, if you were presented with an ambiguous sound between /ABA/ and /ADA/ paired with your own articulations or a face saying /ABA/, then you have perceived that sound as more like /ABA/, thus "recalibrating" your perception of that ambiguous sound.' +
-     ' Later, during the auditory-only trials, you should have tended to experience a bias to hear the ambiguous sound as /ABA/.'</p> +
+     ' Later, during the auditory-only trials, you should have tended to experience a bias to hear the ambiguous sound as /ABA/. </p>' +
      '<p> In our study, we also sometimes put the articulation in opposition to the face.' +
      ' For example, we had you articulate /ABA/ paired with a face saying /ADA/. Here, there are two biases on that ambiguous sound pushing in opposite directions.' +
      ' We are interested to see how auditory-only responses would change after this conflict training. This research will help us clarify the link between audition and vision and the motor system in speech processing.</p>' +
