--- a/study_assets_root/recal/Recal_TestVersion2.html
+++ b/study_assets_root/recal/Recal_TestVersion2.html
@@ -102,7 +102,7 @@ var say_ADA = {
 var video_response = {
   type: 'html-slider-response',
   stimulus: "<p>What sound did you hear the most?</p>",
-  labels: ['100% ABA', '50% ABA/50% ADA', '100% ADA'],
+  labels: ['100% ABA', '50% ABA|50% ADA', '100% ADA'],
   min: 1,
   max: 7,
   slider_width: 750,
