Update and rename RO_exp(revised).html to RO_exp_revised.html

--- a/study_assets_root/RespOnline/RO_exp_revised.html
+++ b/study_assets_root/RespOnline/RO_exp_revised.html
@@ -12,7 +12,7 @@
 	<script src="shared_assets/js/instructions.js"></script>
 	<script src="shared_assets/js/binary-audio.js"></script>
 
-    <script src="RO_exp(revised).js"></script>
+    <script src="RO_exp_revised.js"></script>
 
     <link href="shared_assets/stylesheet.css" rel="stylesheet" />
     <link href="shared_assets/jspsych-6.0.5/css/jspsych.css" rel="stylesheet" type="text/css"></link>
