--- a/study_assets_root/recal/Recal_TestfinalDL.html
+++ b/study_assets_root/recal/Recal_TestfinalDL.html
@@ -80,7 +80,7 @@
 // instructions for saying ABA //
 var say_ABA = {
         type: 'html-keyboard-response',
-        data: {test_part: 'instructions', blocktype: /ABA/},
+        data: {test_part: 'instructions', blocktype: 'ABA'},
         stimulus: '<p>Please mouth <b>ABA</b> in sync with the following videos.</p>' +
         '<p>Press the spacebar or enter key to begin.</p>',
         choices: ['spacebar', 'enter']
