updated "mail to" function for recal

--- a/study_assets_root/recal/Recal_Debrief.html
+++ b/study_assets_root/recal/Recal_Debrief.html
@@ -21,7 +21,7 @@
         var finish_conf = {
             type: 'instructions',
             pages: [
-                header + '<h2>Study Complete</h2><p>Thank you for your participation. Your confirmation ID is <b>' + jatos.studyResultId + '</b>. To arrange payment, please email <a href="mailto:langdev@sfu.ca ' + jatos.studyResultId + '">langdev@sfu.ca</a> with the subject <b>Recal: ' + jatos.studyResultId + '</b></p>'
+                header + '<h2>Study Complete</h2><p>Thank you for your participation. Your confirmation ID is <b>' + jatos.studyResultId + '</b>. To arrange payment, please email <a href="mailto:langdev@sfu.ca?Subject=Participant%20Recal' + jatos.studyResultId + '">langdev@sfu.ca</a> with the subject <b>Recal ' + jatos.studyResultId + '</b></p>'
             ],
             show_clickable_nav: true,
             button_label_next: 'Close',
