added call function for preloading

--- a/study_assets_root/RespOnline_crowdsourcing/RO_exp_crowdsourcing.html
+++ b/study_assets_root/RespOnline_crowdsourcing/RO_exp_crowdsourcing.html
@@ -9,6 +9,7 @@
 	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
 	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-audio-keyboard-response.js"></script>
 	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-image-keyboard-response.js"></script>
+	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-call-function.js"></script>
 	<script src="shared_assets/js/instructions.js"></script>
 	<script src="shared_assets/js/binary-audio.js"></script>
 
