--- a/study_assets_root/towel/questionnaire.html
+++ b/study_assets_root/towel/questionnaire.html
@@ -3,7 +3,7 @@
 <head>
     <title>LangDev Questionaire</title>
 
-    <script src="/musiclang/assets/javascripts/jatos.js"></script>
+    <script src="jatos.js"></script>
     <script src="shared_assets/jspsych-6.0.4/jspsych.js"></script>
     <script src="shared_assets/js/instructions.js"></script>
     <script src="shared_assets/js/survey-yes-no.js"></script>
