updated jatos reference for new server

--- a/study_assets_root/musiclang_mannat/man-nat-adapted.html
+++ b/study_assets_root/musiclang_mannat/man-nat-adapted.html
@@ -4,7 +4,7 @@
     <meta name="google" content="notranslate" />
     <title>LangDev MusicLang</title>
 
-    <script src="/assets/javascripts/jatos.js"></script>
+    <script src="jatos.js"></script>
 	<script src="jspsych-6.0.4/jspsych.js"></script>
 		<script src="jspsych-6.0.4/plugins/jspsych-html-keyboard-response.js"></script>
 		<script src="jspsych-6.0.4/plugins/jspsych-audio-keyboard-response.js"></script>
