updated jatos reference for new server

--- a/study_assets_root/musiclang_germnat/germ-nat.html
+++ b/study_assets_root/musiclang_germnat/germ-nat.html
@@ -4,7 +4,7 @@
     <meta name="google" content="notranslate" />
     <title>LangDev MusicLang</title>
 
-    <script src="/musiclang/assets/javascripts/jatos.js"></script>
+    <script src="jatos.js"></script>
     <script src="shared_assets/jspsych-6.0.4/jspsych.js"></script>
     <script src="shared_assets/js/instructions.js"></script>
     <script src="shared_assets/js/binary-audio.js"></script>
