--- a/study_assets_root/RespOnline/RO_EndScreen.html
+++ b/study_assets_root/RespOnline/RO_EndScreen.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>LangDev RPS</title>
-    <script src="/musiclang/assets/javascripts/jatos.js"></script>
+    <script src="jatos.js"></script>
 	<script src="shared_assets/jspsych-6.0.5/jspsych.js"></script>
   <script src="shared_assets/js/instructions.js"></script>
    	<script src="shared_assets/js/survey-yes-no.js"></script>
