--- a/study_assets_root/RespOnline/RO_debrief.html
+++ b/study_assets_root/RespOnline/RO_debrief.html
@@ -3,7 +3,7 @@
 <head>
     <title>LangDev Debrief</title>
 
-    <script src="/musiclang/assets/javascripts/jatos.js"></script>
+    <script src="jatos.js"></script>
   	<script src="shared_assets/jspsych-6.0.5/jspsych.js"></script>
 	<script src="shared_assets/js/instructions.js"></script>
   <script src="shared_assets/jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
