--- a/study_assets_root/RespOnline/RO_exp_revised.html
+++ b/study_assets_root/RespOnline/RO_exp_revised.html
@@ -4,7 +4,7 @@
     <meta name="google" content="notranslate" />
     <title>LangDev RespOnline</title>
 
-    <script src="/musiclang/assets/javascripts/jatos.js"></script>
+    <script src="jatos.js"></script>
 	<script src="shared_assets/jspsych-6.0.5/jspsych.js"></script>
 	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
 	<script src="shared_assets/jspsych-6.0.5/plugins/jspsych-audio-keyboard-response.js"></script>
