fixed slight typo

--- a/study_assets_root/recal/Recal_Pretest.html
+++ b/study_assets_root/recal/Recal_Pretest.html
@@ -41,7 +41,7 @@ timeline.push(generalinstructionsclick);
 var practicetrialinstructionsDL = {
     type: 'instructions',
     pages: ["<p>Press the <i>left arrow key</i> for <b>/ADA/</b> and <i>right arrow key</i> for <b>/ABA/</b>.</p>" +
-    "<p> Answer as quickly and accurate as you can. If you do not know, you may guess. </p>" +
+    "<p> Answer as quickly and accurately as you can. If you do not know, you may guess. </p>" +
     "<p> Please use your dominant hand (right if you are righthanded, left if you are lefthanded) to press the arrow keys.</p>" +
     "<p> You will be given a practice trial. Click <i>next</i> to begin the practice trial.</p>"],
           show_clickable_nav: true,
