Reverse previous update

--- a/study_assets_root/Community/parent_questionnaire_sec2.html
+++ b/study_assets_root/Community/parent_questionnaire_sec2.html
@@ -148,7 +148,7 @@ var family_languageexposure = {
 };
 
 var family_languagedetails = {
-    type: 'familymember-info',
+    type: 'member-info',
     preamble: header + "<h2>SECTION 2: LANGUAGE BACKGROUND ASSESSMENT</h2> <b> Family Language Exposure Part 2 </b> <br>Under <b>'Proportion Spoken'</b>, on a scale from 1-7, please indicate how much they speak this language(s) to your child." +
        " <br> 1 means the person uses only English to speak to the child, 4 means they use half English and half the other language, whereas 7 means that the person only uses another language.<br>" +
        " <br> <i><b>Example:</b> If Chidi's mother speaks mainly English and some French, <br>grandmother speaks both English and French <br>and brother speaks only English to him, <br>their entries would be: Mother: 2; Grandmother: 4; Brother: 1.</i><br>" +
@@ -199,7 +199,7 @@ var other_languageexposure = {
 };
 
 var other_languagedetails = {
-    type: 'othermember-info',
+    type: 'members-info',
     preamble: header + "<h2>SECTION 2: LANGUAGE BACKGROUND ASSESSMENT</h2> <b> Other Individual Language Exposure Part 2</b> <br> Under <b>'Proportion Spoken'</b>, on a scale from 1-7, please indicate how much they speak this language(s) to your child." +
        "<br> 1 means the person uses only English to speak to the child, 4 means they use half English and half the other language, whereas 7 means that the person only uses another language.<br>" +
       "<br> <i><b>Example</b>: If Chidi is spoken to by his teacher in all English, but is spoken to in English and French by his daycare giver, their entries would be: Teacher: 1; Daycare giver: 4</i><br>" +
